# Pygame-Sprite-Animation

./: .env  __main__.py  pyproject.toml
src/: main.py  settings.py  tree.py
